# cpp-dp-2025-03-24

.devcontainer/: Dockerfile
Behavioral/Chain.Example/: main.cpp
Behavioral/Chain.TheoryCode/: chain.hpp
Behavioral/Command.Exercise/: CMakeLists.txt
Behavioral/Command.Exercise/gtests/: CMakeLists.txt
Behavioral/Observer.TheoryCode/: CMakeLists.txt  main.cpp  observer.hpp
Behavioral/State.Example/tests/: CMakeLists.txt
Behavioral/State.Exercise/tests/: CMakeLists.txt
Behavioral/Strategy.Exercise/: main.cpp
Behavioral/TemplateMethod.TheoryCode/: main.cpp  template_method.hpp
Behavioral/Visitor.Exercise/src/: visitors.hpp
Creational/AbstractFactory.Example/: enemy_factory.hpp  game.hpp  main.cpp  monsters.hpp
Creational/Builder.Example/: main.cpp
Creational/FactoryMethod.Example/: main.cpp  rectangle.cpp  shape_factories.hpp  square.cpp
Creational/FactoryMethod.Exercise2/: circle.cpp  circle.hpp
Creational/FactoryMethod.Intro/: factory.hpp  main.cpp
Creational/Prototype.Exercise/: circle.hpp  main.cpp  rectangle.hpp  shape.hpp
Creational/Prototype.Intro/: main.cpp
OOP/Delegation/: delegation.cpp
OOP/DynamicStaticPolymorphism/: static_dynamic_poly.cpp
OOP/PolymorphicWrappers/: shapes.hpp
Structural/Adapter.TheoryCode/: adapter.hpp  main.cpp
Structural/Bridge.Pimpl/: bitmap.cpp  bitmap.hpp
Structural/Composite.Exercise/: main.cpp  shape.hpp  shape_group.cpp  shape_group.hpp
Structural/Composite.TheoryCode/: composite.hpp  main.cpp
Structural/Decorator.Exercise/: main.cpp  starbugs_coffee.hpp
Structural/Decorator.TheoryCode/: decorator.hpp  main.cpp
Structural/Proxy.TheoryCode/: main.cpp
(+7 files in other folders)
